test/scc/pp/errors/015.a
015.t:3:1: error: '#' is not expected here